--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "server-only": "^0.0.1",
     "swr": "^2.1.5",
     "tailwind-merge": "^1.12.0",
