--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
     "server-only": "^0.0.1",
