--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.12.12",
     "lucide-react": "^0.206.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
