--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "swr": "^2.1.5",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
+    "tailwindcss-animated": "^1.0.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
